# websocket-ocr

./: Cargo.toml  README.md
src/: main.rs
